@@ -1,3 +1,9 @@
+2014-07-29  Corinna Vinschen  <corinna@vinschen.de>
+
+	* mkgroup.c (usage): Move info message that this /etc/group isn't really
+	required anymore more to the top of the usage output.
+	* mkpasswd.c (usage): Ditto for /etc/passwd.  Drop old text from output.
+
 2014-06-16  Corinna Vinschen  <corinna@vinschen.de>
 
 	* passwd.c (main): Fix typo in error output.
